--- a/index.html
+++ b/index.html
@@ -73,16 +73,35 @@
 				</div><!--Contenido blog -->
 			</article>
 		</main><!-- Blog -->
+
 		<aside class="categoria fondo-gris mt-30">
-			<h3 class="centrar color-blanco">Categorias</h3>
-			<div class="form-group">
-                <select class="form-control">
-                	<option value="" disabled selected>--Seleccione--</option>
-                	<option value="powershell">PowerShell</option>
-                	<option value="metasploit">Metasploit</option>
-                	<option value="Pentesting">Pentesting</option>
-                </select>
-             </div>
+			<h3 class="centrar color-blanco">Entradas destacadas</h3>
+			<article class="pt-20 entrada-blog-destacada mt-10">
+				<div class="imagen">
+					<img src="img/blog1.jpg">
+				</div><!--imagen -->
+				<!-- contenido de los articulos -->
+				<div class="contenido-blog-destacado">
+					<h3>Hacking con python</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quibusdam cupiditate sequi saepe
+					</p>
+					<a href="entrada.html" class="btn btn-primary">Leer</a>
+				</div><!--Contenido blog destacada-->
+			</article>
+
+			<article class="pt-20 entrada-blog-destacada mt-10">
+				<div class="imagen">
+					<img src="img/blog1.jpg">
+				</div><!--imagen -->
+				<!-- contenido de los articulos -->
+				<div class="contenido-blog-destacado">
+					<h3>Hacking con Ruby</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quibusdam cupiditate sequi saepe
+					</p>
+					<a href="entrada.html" class="btn btn-primary">Leer</a>
+				</div><!--Contenido blog destacada-->
+			</article>
+			
 		</aside>
 		
 	</div><!--contenido principal -->
