--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		</main><!-- Blog -->
 
 		<aside class="categoria fondo-gris mt-30">
-			<h3 class="centrar color-blanco">Entradas destacadas</h3>
+			<h4 class="centrar color-blanco">Entradas destacadas</h4>
 			<article class="pt-20 entrada-blog-destacada mt-10">
 				<div class="imagen">
 					<img src="img/blog1.jpg">
@@ -105,5 +105,20 @@
 		</aside>
 		
 	</div><!--contenido principal -->
+	<!-- Footer -->
+	<footer class="site-footer">
+		<div class="contenedor">
+			<div class="barra-footer">
+				<p>Crypto<span>gami</span></p>
+				<nav class="navegacion">
+					<a href="articulos.html">Articulos</a>
+					<a href="#">Noticias</a>
+					<a href="articulos.html">nosotros</a>
+				</nav>
+			</div>
+		</div><!-- contenedor -->
+	</footer>
+
+
 </body>
 </html>
