--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 					<img src="img/blog1.jpg">
 				</div><!--imagen -->
 				<!-- contenido de los articulos -->
-				<div class="contenido-blog-destacado">
-					<h3>Hacking con python</h3>
+				<div class="contenido-blog-destacado color-blanco">
+					<h4>Hacking con python</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quibusdam cupiditate sequi saepe
 					</p>
 					<a href="entrada.html" class="btn btn-primary">Leer Entrada</a>
@@ -94,8 +94,8 @@
 					<img src="img/blog1.jpg">
 				</div><!--imagen -->
 				<!-- contenido de los articulos -->
-				<div class="contenido-blog-destacado">
-					<h3>Hacking con Ruby</h3>
+				<div class="contenido-blog-destacado color-blanco">
+					<h4>Hacking con Ruby</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quibusdam cupiditate sequi saepe
 					</p>
 					<a href="entrada.html" class="btn btn-primary">Leer Entrada</a>
@@ -113,7 +113,7 @@
 				<nav class="navegacion">
 					<a href="articulos.html">Articulos</a>
 					<a href="#">Noticias</a>
-					<a href="articulos.html">nosotros</a>
+					<a href="nosotros.html">nosotros</a>
 				</nav>
 			</div>
 		</div><!-- contenedor -->
