--- a/articulos.html
+++ b/articulos.html
@@ -33,8 +33,9 @@
 				<img src="img/blog1.jpg" alt="">
 			</div><!--Columnas 4--->
 
-			<div class="columnas-8">
+			<div class="columnas-8 texto-entrada">
 				<h4>Pentesting con PowerShell</h4>
+				<p>Escrito el <span>16/08/2019</span> por <span>Admin</span></p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam nihil ducimus quia quae, non corrupti, blanditiis, mollitia atque maxime adipisci sapiente magni odio soluta temporibus a sequi sunt enim sint?</p>
 				<a href="entrada.html" class="btn btn-primary">Leer Entrada</a>
 			</div><!-- Columnas 8 -->
@@ -45,8 +46,9 @@
 				<img src="img/blog1.jpg" alt="">
 			</div><!--Columnas 4--->
 
-			<div class="columnas-8">
+			<div class="columnas-8 texto-entrada">
 				<h4>Pentesting con Metasploit</h4>
+				<p>Escrito el <span>16/08/2019</span> por <span>Admin</span></p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam nihil ducimus quia quae, non corrupti, blanditiis, mollitia atque maxime adipisci sapiente magni odio soluta temporibus a sequi sunt enim sint?</p>
 				<a href="entrada.html" class="btn btn-primary">Leer Entrada</a>
 			</div><!-- Columnas 8 -->
@@ -57,8 +59,9 @@
 				<img src="img/blog1.jpg" alt="">
 			</div><!--Columnas 4--->
 
-			<div class="columnas-8">
+			<div class="columnas-8 texto-entrada">
 				<h4>Pentesting con Python</h4>
+				<p>Escrito el <span>16/08/2019</span> por <span>Admin</span></p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam nihil ducimus quia quae, non corrupti, blanditiis, mollitia atque maxime adipisci sapiente magni odio soluta temporibus a sequi sunt enim sint?</p>
 				<a href="entrada.html" class="btn btn-primary">Leer Entrada</a>
 			</div><!-- Columnas 8 -->
@@ -69,8 +72,9 @@
 				<img src="img/blog1.jpg" alt="">
 			</div><!--Columnas 4--->
 
-			<div class="columnas-8">
+			<div class="columnas-8 texto-entrada">
 				<h4>Hardening de Servidores</h4>
+				<p>Escrito el <span>16/08/2019</span> por <span>Admin</span></p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam nihil ducimus quia quae, non corrupti, blanditiis, mollitia atque maxime adipisci sapiente magni odio soluta temporibus a sequi sunt enim sint?</p>
 				<a href="entrada.html" class="btn btn-primary">Leer Entrada</a>
 			</div><!-- Columnas 8 -->
