Pequeño ajuste al margin

--- a/noticias.html
+++ b/noticias.html
@@ -30,7 +30,7 @@
 		<h2 class="centrar">Noticias</h2>
 		<article class="entrada-blog grid">
 			<div class="columnas-4">
-				<img src="img/blog1.jpg" alt="">
+				<img src="img/blog1.jpg" class="mt-20" alt="">
 			</div><!--Columnas 4--->
 
 			<div class="columnas-8 texto-entrada">
@@ -43,7 +43,7 @@
 
 		<article class="entrada-blog grid mt-30">
 			<div class="columnas-4">
-				<img src="img/blog1.jpg" alt="">
+				<img src="img/blog1.jpg" class="mt-20" alt="">
 			</div><!--Columnas 4--->
 
 			<div class="columnas-8 texto-entrada">
@@ -56,7 +56,7 @@
 
 		<article class="entrada-blog grid mt-30">
 			<div class="columnas-4">
-				<img src="img/blog1.jpg" alt="">
+				<img src="img/blog1.jpg" class="mt-20" alt="">
 			</div><!--Columnas 4--->
 
 			<div class="columnas-8 texto-entrada">
@@ -69,7 +69,7 @@
 
 		<article class="entrada-blog grid mt-30">
 			<div class="columnas-4">
-				<img src="img/blog1.jpg" alt="">
+				<img src="img/blog1.jpg" class="mt-20" alt="">
 			</div><!--Columnas 4--->
 
 			<div class="columnas-8 texto-entrada">
